<resources>
    <string name="app_name">Bank One</string>

    <!--Strings from sign In Activity-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_to_bank_one">New to Bank One?</string>
    <string name="join_now">" Join now"</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>

    <!--Strings from  Activity Main-->


    <string-array name="Transaction_type">
    <item>Transfer</item>
    <item>Deposit</item>
    <item>Withdraw</item>
    </string-array>


</resources>